--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
 
     <description>RCM</description>
     
+	 <licenses>
+        <license>
+            <name>Licencja na aplikację Sudoku</name>
+            <distribution>repository</distribution>
+            <url>https://atlas.it.p.lodz.pl/bitbucket/scm/prokom2122/lch_pn_1200_01.git</url>
+            <comments>Licencja upoważniająca do udostępniania i dystrybuowania oprogramowania</comments>
+        </license>
+    </licenses>
+	
     <reporting>
         <plugins>
             <plugin>
