Little modification to pom.xml Licences section

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
             <name>Licencja na aplikację Sudoku</name>
             <distribution>repository</distribution>
             <url>https://atlas.it.p.lodz.pl/bitbucket/scm/prokom2122/lch_pn_1200_01.git</url>
-            <comments>Licencja upoważniająca do udostępniania i dystrybuowania oprogramowania</comments>
+            <comments>Licencja upoważniająca do udostępniania i dystrybuowania oprogramowania.</comments>
         </license>
     </licenses>
 	
