--- a/pom.xml
+++ b/pom.xml
@@ -25,15 +25,6 @@
     </developers>
 
     <description>RCM</description>
-    
-	 <licenses>
-        <license>
-            <name>Licencja na aplikację Sudoku</name>
-            <distribution>repository</distribution>
-            <url>https://atlas.it.p.lodz.pl/bitbucket/scm/prokom2122/lch_pn_1200_01.git</url>
-            <comments>Licencja upoważniająca do udostępniania i dystrybuowania oprogramowania.</comments>
-        </license>
-    </licenses>
 	
     <reporting>
         <plugins>
@@ -168,8 +159,48 @@
                 <artifactId>maven-site-plugin</artifactId>
                 <version>3.8.2</version>
             </plugin>
+            <plugin>
+                <groupId>com.mycila.maven-license-plugin</groupId>
+                <artifactId>maven-license-plugin</artifactId>
+                <version>1.9.0</version>
+                <configuration>
+                    <header>${license.dir}/license.txt</header>
+                    <properties>
+                        <project>${project.name}</project>
+                        <year>${project.inceptionYear}</year>
+                    </properties>
+                    <includes>
+                        <include>src/main/java/**</include>
+                        <include>src/test/java/**</include>
+                    </includes>
+                    <strictCheck>true</strictCheck>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                        <phase>process-sources</phase>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.mycila</groupId>
+                        <artifactId>licenses</artifactId>
+                        <version>1</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
         </plugins>
     </build>
+
+    <licenses>
+        <license>
+            <name>GNU Lesser General Public License</name>
+            <url>http://www.gnu.org/licenses/lgpl.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
 
     <dependencies>
         <dependency>
@@ -184,6 +215,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 <!--        <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>-->
+        <license.dir>${basedir}</license.dir>
         <maven.compiler.release>17</maven.compiler.release>
     </properties>
 </project>
