--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -11,6 +11,13 @@
     </parent>
 
     <artifactId>ModelProject</artifactId>
+    <version>2.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <name>Model</name>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <junit.version>5.7.1</junit.version>
+    </properties>
 
 </project>
