--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -9,6 +9,11 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.32</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>17-ea+11</version>
+        </dependency>
     </dependencies>
 
     <parent>
