--- a/View/src/main/resources/viewBundle.properties
+++ b/View/src/main/resources/viewBundle.properties
@@ -8,4 +8,6 @@ winningLabel=Brawo, wygra\u0142e\u015b!
 saveButton=Zapisz
 readButton=Wczytaj
 english=Angielski
-polish=Polski"}
+polish=Polski
+viewException=Pojawi\u0142 si\u0119 problem w warstwie widokowej
+cause=\nSpowodowany przez
