--- a/Model/pom.xml
+++ b/Model/pom.xml
@@ -14,6 +14,11 @@
             <artifactId>javafx-base</artifactId>
             <version>17-ea+11</version>
         </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.36.0.3</version>
+        </dependency>
     </dependencies>
 
     <parent>
