--- a/Model/src/main/resources/bundle.properties
+++ b/Model/src/main/resources/bundle.properties
@@ -1,6 +1,8 @@
 FailedFileOperation=Operacja na pliku nie powiod\u0142a si\u0119.
 IllegalBoardValue=Przekazana zosta\u0142a z\u0142a warto\u015b\u0107.
 NotEnoughElements=Niewystarczaj\u0105ca liczba elementów listy.
+DatabaseFail=Operacja na bazie danych nie powiod\u0142a si\u0119.
+OutOfDatabase=Indeks nie znajduje si\u0119 w bazie.
 cause=\nSpowodowany przez
 closed=zamkniety
 max-min=Warto\u015b\u0107 maksymalna nie mo\u017ce by\u0107 mniejsza od minimalnej.
