--- a/Model/src/main/resources/bundle.properties
+++ b/Model/src/main/resources/bundle.properties
@@ -3,6 +3,7 @@ IllegalBoardValue=Przekazana zosta\u0142a z\u0142a warto\u015b\u0107.
 NotEnoughElements=Niewystarczaj\u0105ca liczba elementów listy.
 DatabaseFail=Operacja na bazie danych nie powiod\u0142a si\u0119.
 OutOfDatabase=Indeks nie znajduje si\u0119 w bazie.
+NotInitialized=Baza nie zosta\u0142a zainicjalizowana.
 EmptyRecord=Pusty rekord bazy.
 cause=\nSpowodowany przez
 closed=zamkniety
